[package]
name = "crlf"
version = "0.1.0"
edition = "2021"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ansi_term = "0.12.1"
anyhow = "1.0.93"
atty = "0.2.14"
clap = { version = "4.5.20", features = ["derive"] }
git-version = "0.3.5"
glob = "0.3.1"
